{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 394,
  "lineage": "4b9b9e5d-ec89-1ce0-e834-8bab6deffb16",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268050465834:vpc/vpc-065c43b0612cc9222",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-037c3b62ce1256699",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a1226d506f6be191",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "eks-blueprint"
                ]
              }
            ],
            "id": "vpc-065c43b0612cc9222",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ac45f32031d3a7d1",
            "owner_id": "268050465834",
            "tags": {
              "Blueprint": "eks-blueprint",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268050465834:security-group/sg-0f531de3fc47ca02d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f531de3fc47ca02d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bb40785f615868a0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-blueprint-blue-cluster-20231026193954885000000003",
            "name_prefix": "eks-blueprint-blue-cluster-",
            "owner_id": "268050465834",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-blueprint-blue",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-blue-cluster",
              "karpenter.sh/discovery": "eks-blueprint-blue"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint-blue",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-blue-cluster",
              "karpenter.sh/discovery": "eks-blueprint-blue"
            },
            "timeouts": null,
            "vpc_id": "vpc-065c43b0612cc9222"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268050465834:security-group/sg-0bb40785f615868a0",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb40785f615868a0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0bf9b35e5f1626667"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 15017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0560b6a9179046870",
                  "sg-069afd69fe4f5b27b"
                ],
                "self": false,
                "to_port": 15017
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f531de3fc47ca02d"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f531de3fc47ca02d"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f531de3fc47ca02d"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f531de3fc47ca02d"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f531de3fc47ca02d"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f531de3fc47ca02d"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "eks-blueprint-blue-node-20231026193954883900000002",
            "name_prefix": "eks-blueprint-blue-node-",
            "owner_id": "268050465834",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-blueprint-blue",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-blue-node",
              "karpenter.sh/discovery": "eks-blueprint-blue",
              "kubernetes.io/cluster/eks-blueprint-blue": "owned"
            },
            "tags_all": {
              "Blueprint": "eks-blueprint-blue",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-blueprint-blue-node",
              "karpenter.sh/discovery": "eks-blueprint-blue",
              "kubernetes.io/cluster/eks-blueprint-blue": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-065c43b0612cc9222"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3156273986",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f531de3fc47ca02d",
            "security_group_rule_id": "sgr-0bdd5530e4b604d2c",
            "self": false,
            "source_security_group_id": "sg-0bb40785f615868a0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2009454585",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bb40785f615868a0",
            "security_group_rule_id": "sgr-0e3e361261cb2505c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3987495011",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb40785f615868a0",
            "security_group_rule_id": "sgr-07de4c9c8f7291be7",
            "self": false,
            "source_security_group_id": "sg-0f531de3fc47ca02d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1099136448",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb40785f615868a0",
            "security_group_rule_id": "sgr-0b126da1a430ed30d",
            "self": false,
            "source_security_group_id": "sg-0f531de3fc47ca02d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2294356566",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb40785f615868a0",
            "security_group_rule_id": "sgr-0daf46a75b0912f7e",
            "self": false,
            "source_security_group_id": "sg-0f531de3fc47ca02d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2610767479",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb40785f615868a0",
            "security_group_rule_id": "sgr-0a1664907cac8a83f",
            "self": false,
            "source_security_group_id": "sg-0f531de3fc47ca02d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4282127804",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb40785f615868a0",
            "security_group_rule_id": "sgr-0f2db1988ce4dc51f",
            "self": false,
            "source_security_group_id": "sg-0f531de3fc47ca02d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-885734668",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb40785f615868a0",
            "security_group_rule_id": "sgr-00e454b4d6c46ea14",
            "self": false,
            "source_security_group_id": "sg-0f531de3fc47ca02d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-163880673",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb40785f615868a0",
            "security_group_rule_id": "sgr-07cb73cf5873e5a02",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2610626312",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb40785f615868a0",
            "security_group_rule_id": "sgr-0362e4dab4ea72652",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1069898983",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0bb40785f615868a0",
            "security_group_rule_id": "sgr-0677e115e3377e0b1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubeflow_components",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "kubeflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kubeflow",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "control-plane": "kubeflow",
                  "istio-injection": "enabled"
                },
                "name": "kubeflow",
                "resource_version": "178751",
                "uid": "142908e8-716e-40fa-b37c-298a895a53ae"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubeflow_components.module.ack_sagemaker.module.irsa",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "ack-system",
            "metadata": [
              {
                "generation": 0,
                "name": "ack-system",
                "resource_version": "1253001",
                "uid": "e9cf35f5-4c3a-45a8-87e0-da13f94c0634"
              }
            ],
            "timeouts": {
              "delete": "15m"
            },
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks_cluster.module.eks.aws_eks_cluster.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubernetes_addons.module.argo_rollouts[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "argo-rollouts",
            "metadata": [
              {
                "generation": 0,
                "name": "argo-rollouts",
                "resource_version": "974",
                "uid": "159056ce-7374-41fe-a5ad-7aadf92c538f"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubernetes_addons.module.argocd[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "973",
                "uid": "0be3e0db-1384-42cb-a4c0-b766f64ae440"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks_cluster.data.aws_secretsmanager_secret.argocd",
            "module.eks_cluster.data.aws_secretsmanager_secret_version.admin_password_version",
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubernetes_addons.module.aws_cloudwatch_metrics[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "amazon-cloudwatch",
            "metadata": [
              {
                "generation": 0,
                "name": "amazon-cloudwatch",
                "resource_version": "1018",
                "uid": "edb941b8-402a-4318-baf2-6059e345f3c1"
              }
            ],
            "timeouts": {
              "delete": "15m"
            },
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_caller_identity.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks_cluster.module.kubernetes_addons.data.aws_partition.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_region.current",
            "module.eks_cluster.module.kubernetes_addons.time_sleep.dataplane"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubernetes_addons.module.aws_for_fluent_bit[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aws-for-fluent-bit",
            "metadata": [
              {
                "generation": 0,
                "name": "aws-for-fluent-bit",
                "resource_version": "20051",
                "uid": "0ea7a6a0-b0bb-4fbb-87f3-1328c6b31787"
              }
            ],
            "timeouts": {
              "delete": "15m"
            },
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_caller_identity.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks_cluster.module.kubernetes_addons.data.aws_partition.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_region.current",
            "module.eks_cluster.module.kubernetes_addons.module.aws_for_fluent_bit.aws_iam_policy.aws_for_fluent_bit",
            "module.eks_cluster.module.kubernetes_addons.module.aws_for_fluent_bit.data.aws_iam_policy_document.irsa",
            "module.eks_cluster.module.kubernetes_addons.time_sleep.dataplane"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubernetes_addons.module.cert_manager[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "cert-manager",
            "metadata": [
              {
                "generation": 0,
                "name": "cert-manager",
                "resource_version": "19387",
                "uid": "2f121728-140a-4551-bb14-a2a09facc716"
              }
            ],
            "timeouts": {
              "delete": "15m"
            },
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_caller_identity.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks_cluster.module.kubernetes_addons.data.aws_partition.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_region.current",
            "module.eks_cluster.module.kubernetes_addons.module.cert_manager.aws_iam_policy.cert_manager",
            "module.eks_cluster.module.kubernetes_addons.module.cert_manager.data.aws_iam_policy_document.cert_manager_iam_policy_document",
            "module.eks_cluster.module.kubernetes_addons.module.cert_manager.data.aws_route53_zone.selected",
            "module.eks_cluster.module.kubernetes_addons.time_sleep.dataplane"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.kubernetes_addons.module.karpenter[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "karpenter",
            "metadata": [
              {
                "generation": 0,
                "name": "karpenter",
                "resource_version": "19386",
                "uid": "25c0e493-b0bd-4534-8084-d6289a101783"
              }
            ],
            "timeouts": {
              "delete": "15m"
            },
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks_cluster.data.aws_subnets.private",
            "module.eks_cluster.data.aws_vpc.vpc",
            "module.eks_cluster.module.eks.aws_cloudwatch_log_group.this",
            "module.eks_cluster.module.eks.aws_eks_cluster.this",
            "module.eks_cluster.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_cluster.module.eks.aws_iam_role.this",
            "module.eks_cluster.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.eks.aws_security_group_rule.cluster",
            "module.eks_cluster.module.eks.aws_security_group_rule.node",
            "module.eks_cluster.module.eks.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_cluster.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_cluster.module.eks.data.aws_iam_session_context.current",
            "module.eks_cluster.module.eks.data.aws_partition.current",
            "module.eks_cluster.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks_cluster.module.eks.module.kms.aws_kms_key.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks_cluster.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_cluster.module.eks.module.kms.data.aws_partition.current",
            "module.eks_cluster.module.karpenter.aws_iam_instance_profile.this",
            "module.eks_cluster.module.karpenter.aws_iam_role.this",
            "module.eks_cluster.module.karpenter.data.aws_iam_policy_document.assume_role",
            "module.eks_cluster.module.karpenter.data.aws_partition.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_caller_identity.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks_cluster.module.kubernetes_addons.data.aws_partition.current",
            "module.eks_cluster.module.kubernetes_addons.data.aws_region.current",
            "module.eks_cluster.module.kubernetes_addons.module.karpenter.aws_iam_policy.karpenter",
            "module.eks_cluster.module.kubernetes_addons.module.karpenter.aws_sqs_queue.this",
            "module.eks_cluster.module.kubernetes_addons.module.karpenter.data.aws_iam_policy_document.karpenter",
            "module.eks_cluster.module.kubernetes_addons.time_sleep.dataplane"
          ]
        }
      ]
    }
  ]
}